Bug fixes - Fix a background color issue on big screens - Fix dark mode icons not showing when entering webpage for first time

--- a/src/shared.css
+++ b/src/shared.css
@@ -53,6 +53,7 @@ body {
   justify-content: space-between;
   font-family: Nunito;
   height: 100%;
+  background-color: var(--primaryColor);
 }
 
 a {
